Fix #1224: Filtering of operations in operation list by activation ID and flags - Switch queries to multiline strings - Remove Optional from function parameters - Remove Optional<List> anti-pattern